fix: translate overflow cause
translate X casues odd UI

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -41,6 +41,7 @@ body {
   background-color: #050505;
   scroll-behavior: smooth;
   font-family: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
+  overflow-x: hidden;
 }
 
 h1, h2, h3 {
